Added function to prompt the user and start implementing the corresponding query

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "figlet": "^1.7.0"
+    "cli-table": "^0.3.11",
+    "figlet": "^1.7.0",
+    "inquirer": "^8.2.6",
+    "mysql2": "^3.9.1"
   }
 }
