require dotenv to secure sensitive data

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "cli-table": "^0.3.11",
+    "dotenv": "^16.4.1",
     "figlet": "^1.7.0",
     "inquirer": "^8.2.6",
     "mysql2": "^3.9.1"
